# rustcraft

./: .gitignore  Cargo.toml  README.md  cargo.toml
.github/workflows/: test.yaml
nbt/: Cargo.toml
nbt/src/: lib.rs  tag.rs
networking/: Cargo.toml
networking/src/: encrypted.rs  lib.rs  unencrypted.rs  utils.rs
protocol/: Cargo.toml
protocol/src/: configuration.rs  general.rs  handshake.rs  lib.rs  login.rs  packet.rs  play.rs  serialize.rs  status.rs
protocol/src/configuration/: client.rs  server.rs
protocol/src/general/: bitset.rs  position.rs  pstring.rs  slot.rs  text.rs  varint.rs  varlong.rs
protocol/src/login/: client.rs  encryption.rs  server.rs
protocol/src/metadata/: entity.rs
protocol/src/play/: client.rs  server.rs
protocol/src/status/: client.rs  server.rs
proxy/: Cargo.toml  README.md
proxy/src/: lib.rs  main.rs
server/: Cargo.toml
server/src/: config.rs  data.rs  lib.rs  main.rs  updates.rs  world.rs
server/src/updates/: water.rs
server/src/world/: chunk.rs  coordinates.rs
