[package]
name = "protocol"
version = "0.1.0"
edition = "2021"

[dependencies]
nbt = { path = "../nbt/" }

nom = { version = "7.1.3" }
bytes = { workspace = true }
openssl = { version = "0.10" }
sha1 = { version = "0.10" }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }

[dev-dependencies]
base64 = { version = "0.22" }
