[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
protocol = { path = "../protocol/" }
tokio = { version = "1.37", default-features = false, features = ["net", "time", "rt", "io-util"] }
bytes = { workspace = true }
nom = { version = "7.1.3" }

tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3" }

openssl = { version = "0.10" }
rand = { version = "0.8" }
ring = { version = "0.17" }
rustls = { version = "0.23", features = ["ring"] }
base64 = { version = "0.22" }
asn1_der = { version = "0.7" }
serde_asn1_der = { version = "0.8" }
serde_derive = { version = "1.0" }
serde = { version = "1.0" }
der = { version = "0.7", features = ["std", "oid", "derive"] }
sha1 = { version = "0.10" }
reqwest = { version = "0.12", features = ["json"] }
serde_json = { version = "1.0" }
num-bigint = { version = "0.4" }
uuid = { version = "1.8" }
